--- a/Server/package.json
+++ b/Server/package.json
@@ -16,11 +16,10 @@
     "log":"1.4.x",
     "testing":"0.1.x",
     "async":"0.2.x",
-    "passport":"0.2.x",
-    "passport-facebook":"2.0.x",
     "grunt": "0.4.x",
     "grunt-contrib-jshint": "0.8.x",
-    "node-eventbrite": "0.0.9"
+    "node-eventbrite": "0.0.9",
+    "request": "*",
   },
   "scripts": {
     "test": "node test.js"
